<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoUrRobotics_Config_v_1_x_x" Id="{29ee9b4f-6cb9-0066-239b-3bf709e7eeb1}">
    <Declaration><![CDATA[TYPE
    TcoUrRobotics_Config_v_1_x_x :
    STRUCT
        InfoTime : TIME := T#2S;
        ErrorTime : TIME := T#0S;
		IpAddress : STRING;
    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>