<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoUrRobotics_Control_v_1_x_x" Id="{b061169c-2661-0fb1-04c4-8a8f92702493}">
    <Declaration><![CDATA[TYPE TcoUrRobotics_Control_v_1_x_x : 
STRUCT
    {attribute addProperty Name "<#Start program#>"}
    Start : BOOL;
    {attribute addProperty Name "<#Stop program#>"}
    Stop : BOOL;
    {attribute addProperty Name "<#Pause program#>"}
    Pause : BOOL;
    {attribute addProperty Name "<#Set motor on#>"}
    MotorOn : BOOL;
    {attribute addProperty Name "<#Run action#>"}
    RunAction : BOOL;
    {attribute addProperty Name "<#Master mode#>"}
    MasterMode : BYTE;
    {attribute addProperty Name "<#Tool 1 retract#>"}
    Tool_1_Retract : BOOL;
    {attribute addProperty Name "<#Tool 1 extend#>"}
    Tool_1_Extend : BOOL;
    {attribute addProperty Name "<#Tool 2 retract#>"}
    Tool_2_Retract : BOOL;
    {attribute addProperty Name "<#Tool 2 extend#>"}
    Tool_2_Extend : BOOL;
    {attribute addProperty Name "<#Tool 3 retract#>"}
    Tool_3_Retract : BOOL;
    {attribute addProperty Name "<#Tool 3 extend#>"}
    Tool_3_Extend : BOOL;
    {attribute addProperty Name "<#Tool 4 retract#>"}
    Tool_4_Retract : BOOL;
    {attribute addProperty Name "<#Tool 4 extend#>"}
    Tool_4_Extend : BOOL;
    {attribute addProperty Name "<#Zones#>"}
    Zone : DINT;
    {attribute addProperty Name "<#In position#>"}
    InPosition : DINT;
    {attribute addProperty Name "<#Action number#>"}
    ActionNo : DINT;
    {attribute addProperty Name "<#Global robot speed#>"}
    GlobalSpeed : DINT;
    {attribute addProperty Name "<#Tool number#>"}
    ToolNo : DINT;
    {attribute addProperty Name "<#Workobject number#>"}
    WorkobjectNo : DINT;
    {attribute addProperty Name "<#Point number#>"}
    PointNo : DINT;
    {attribute addProperty Name "<#User specific speed 1#>"}
    UserSpecSpeed1 : REAL;
    {attribute addProperty Name "<#User specific speed 2#>"}
    UserSpecSpeed2 : REAL;
    {attribute  addProperty Name "<#Coordinates#>"}
    Coordinates : TcoAbstractions.TcoRoboticsCoordinates;
    {attribute addProperty Name "<UR Specific#>"}
    Outputs : TcoUrRoboticsOutputData;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>